Add subtitle parsers

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "require": {
         "deeplcom/deepl-php": "^1.8",
         "symfony/http-client": "^6.4",
-        "nyholm/psr7": "^1.8"
+        "nyholm/psr7": "^1.8",
+        "benlipp/srt-parser": "^1.1",
+        "mantas-done/subtitles": "^1.0"
     },
     "config": {
         "allow-plugins": {
