Add max upload size to config

--- a/api/config.php.example
+++ b/api/config.php.example
@@ -2,3 +2,4 @@
     //Key for DeepL API
     //Get your key from here: https://www.deepl.com/en/your-account/keys
     $DeepLAPIKey = '';
+    $maxUploadSize = 51200; //50 KiB in bytes
